# bauman-windows-lab1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/imgui/: imgui.cpp
